# finance-app

./: .env.example  .gitignore  .vscode-settings.json  DEVELOPMENT.md  README.md  SETUP.md  cleanup.ps1  docker-compose.yaml  package-lock.json
.serena/: project.yml
backend/: .env.example  db.sqlite3  dockerfile  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/core/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/settings/: base.py  development.py  production.py
backend/piggy_banks/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/piggy_banks/migrations/: 0001_initial.py  0002_piggybankmovement.py  0003_piggybank_cdi_fields.py
backend/transactions/: models.py  serializers.py  urls.py  views.py
backend/transactions/migrations/: 0001_initial.py  0002_alter_transaction_id.py
frontend/: .env.example  App.tsx  README.md  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  utils.ts  vite.config.ts
frontend/components/AI/: AiInsight.tsx
frontend/components/Dashboards/: GraficoMensalDetalhado.tsx
frontend/components/SummaryCards/: SummaryCards.tsx
frontend/components/Transaction/: TransactionForm.tsx  TransactionTable.tsx
frontend/src/: config.ts  vite-env.d.ts
frontend/src/constants/: index.ts
frontend/src/context/: AuthContext.tsx  LoginContext.tsx  PiggyBanksContext.tsx  RegisterContext.tsx  ThemeContext.tsx  TransactionsContext.tsx
frontend/src/hooks/: usePiggyBanks.tsx  useTransactions.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  (+2 more)
(+35 files in other folders)
